# rag_project

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: processed_files.json
src/: app.py  main.py
src/data/: file_tracker.py  ingestion.py
src/pipeline/: file_tracker.py  ingestion.py
src/processing/: chunking.py
src/rag/: generator.py  retriever.py  vector_store.py
