[project]
name = "rag-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.8",
    "langchain>=1.2.15",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-experimental>=0.4.1",
    "langchain-openai>=1.1.16",
    "numpy>=2.4.4",
    "openai>=2.32.0",
    "pandas>=2.3.3",
    "pypdf>=6.10.2",
    "python-dotenv>=1.2.2",
    "streamlit>=1.57.0",
]
